--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
  
       # Étape 2 : Login à Docker Hub
       - name: Login to DockerHub
-        run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+        run: docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
  
       # Étape 3 : Construire et pousser l'image backend
       - name: Build image and push backend
