--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,70 +1,53 @@
-name: CI/CD Pipeline
- 
+name: Docker Image
 on:
-  push:
-    branches:
-      - main
-      - develop
-  pull_request:
- 
+  workflow_run:
+    workflows: ["CI DevOps 2024"]
+    types: completed # Triggers only when the triggering workflow has completed
+
 jobs:
-  test-backend:
-    runs-on: ubuntu-22.04
- 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2.5.0
- 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'adopt'
- 
-      # Étape : Analyse avec SonarCloud
-      - name: Analyze code with SonarCloud
-        run: |
-          cd simple-api
-          mvn -B verify sonar:sonar \
-              -Dsonar.projectKey=SerenaMarina_tp02_appbigdata \
-              -Dsonar.organization=serenamarina \
-              -Dsonar.host.url=https://sonarcloud.io \
-              -Dsonar.login=${{ secrets.SONAR_TOKEN }}
- 
+  # Define job to build and publish docker image
   build-and-push-docker-image:
-    needs: test-backend
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}  # Trigger only on success
     runs-on: ubuntu-22.04
- 
+    
+    # Steps to perform in job
     steps:
-      # Étape 1 : Checkout du code source
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v2.5.0
- 
-      # Étape 2 : Login à Docker Hub
+
       - name: Login to DockerHub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
- 
-      # Étape 3 : Construire et pousser l'image backend
+        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+
       - name: Build image and push backend
         uses: docker/build-push-action@v3
         with:
-          context: ./simple-api
-          tags: ${{ secrets.DOCKER_USERNAME }}/tp-devops-simple-api:latest
-          push: ${{ github.ref == 'refs/heads/main' }}
- 
-      # Étape 4 : Construire et pousser l'image database
+           # Relative path to the place where source code with Dockerfile is located
+           context: ./simple-api
+           # Note: tags has to be all lower-case
+           tags:  ${{secrets.DOCKER_USERNAME}}/tp-devops-simple-api:backend
+           # Build on feature branches, push only on main branch
+           push: ${{ github.ref == 'refs/heads/main' }}
+
       - name: Build image and push database
         uses: docker/build-push-action@v3
         with:
-          context: ./database
-          tags: ${{ secrets.DOCKER_USERNAME }}/tp-devops-database:latest
-          push: ${{ github.ref == 'refs/heads/main' }}
- 
-      # Étape 5 : Construire et pousser l'image HTTPD
+           # Relative path to the place where source code with Dockerfile is located
+           context: ./database
+           # Note: tags has to be all lower-case
+           tags:  ${{secrets.DOCKER_USERNAME}}/tp-devops-simple-api:database
+           # Build on feature branches, push only on main branch
+           push: ${{ github.ref == 'refs/heads/main' }}
+    
       - name: Build image and push httpd
         uses: docker/build-push-action@v3
         with:
-          context: ./http-server
-          tags: ${{ secrets.DOCKER_USERNAME }}/tp-devops-httpd:latest
-          push: ${{ github.ref == 'refs/heads/main' }}
-      
+           # Relative path to the place where source code with Dockerfile is located
+           context: ./http-server
+           # Note: tags has to be all lower-case
+           tags:  ${{secrets.DOCKER_USERNAME}}/tp-devops-simple-api:httpd
+           # Build on feature branches, push only on main branch
+           push: ${{ github.ref == 'refs/heads/main' }}
+
+      - name: Clear Docker Credentials
+        run: |
+          docker logout
