--- a/ansible/inventories/setup.yml
+++ b/ansible/inventories/setup.yml
@@ -1,7 +1,9 @@
 all:
   vars:
     ansible_user: admin
-    ansible_ssh_private_key_file: id_rsa
+    ansible_ssh_private_key_file: /home/serena/id_rsa
   children:
     prod:
       hosts: serena.ngatchou.taenga.takima.cloud
+
+
